syntax = "proto3";

package api.proto;

import "google/api/client.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/resource.proto";

option go_package = "github.com/TcMits/vnprovince/api/proto";

service VNProvinceService {
  rpc ListDivisions(ListDivisionsRequest) returns (ListDivisionsResponse) {
    option (google.api.http) = {
      get: "/api/divisions"
    };
  }
  rpc GetDivision(GetDivisionRequest) returns (Division) {
    option (google.api.http) = {
      get: "/api/{name=divisions/*}"
    };
    option (google.api.method_signature) = "name";
  }
}

message Division {
  option (google.api.resource) = {
    type: "vnprovince/Division"
    pattern: "divisions/{division_id}"
    singular: "division"
    plural: "divisions"
  };

  // Format: divisions/{division_id}
  string name = 1 [
    (google.api.field_behavior) = IDENTIFIER,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {field_configuration: {path_param_name: "division_name"}}
  ];
  int32 id = 2 [(google.api.field_behavior) = REQUIRED];
  int32 province_code = 3 [(google.api.field_behavior) = REQUIRED];
  int32 district_code = 4 [(google.api.field_behavior) = REQUIRED];
  int32 ward_code = 5 [(google.api.field_behavior) = OPTIONAL];
  string province_name = 6 [(google.api.field_behavior) = REQUIRED];
  string district_name = 7 [(google.api.field_behavior) = REQUIRED];
  string ward_name = 8 [(google.api.field_behavior) = OPTIONAL];
}

message ListDivisionsRequest {
  int32 page_size = 1 [(google.api.field_behavior) = OPTIONAL, (validate.rules).int32 = {gte: 0, lte: 500}];
  string page_token = 2 [(google.api.field_behavior) = OPTIONAL, (validate.rules).string = {ignore_empty: true, uri_ref:  true}];

  // syntax: https://google.aip.dev/160
  // support identities:
  // - ward_code
  // - province_code
  // - district_code
  // - province_name
  // - district_name
  // - ward_name
  string filter = 3 [(google.api.field_behavior) = OPTIONAL];
  int32 skip = 4 [(google.api.field_behavior) = OPTIONAL, (validate.rules).int32 = {gte: 0}];
}

message ListDivisionsResponse {
  repeated Division divisions = 1;
  string next_page_token = 2;
}

message GetDivisionRequest {
  // Format: divisions/{division_id}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {field_configuration: {path_param_name: "division_name"}}
  ];
}
